[gd_scene load_steps=18 format=3 uid="uid://dl24362otq47t"]

[ext_resource type="Script" path="res://Scripts/PuzzleSystem/AlchemicalProcessSymbol.gd" id="1_sbg4w"]
[ext_resource type="Texture2D" uid="uid://7qphghswk1iv" path="res://Assets/2D/AlchemicalProcesses/Aquarius_Multiplication.png" id="2_u7c5d"]
[ext_resource type="Script" path="res://Scripts/PuzzleSystem/UI/AlchemicalSymbolsChoice.gd" id="3_ubrtl"]
[ext_resource type="Texture2D" uid="uid://cudg8ldkwnlxw" path="res://Assets/2D/particles/kenney_particle-pack/PNG (Transparent)/circle_05.png" id="3_whpm2"]
[ext_resource type="Script" path="res://Scripts/PuzzleSystem/UI/AlchemicalSymbol.gd" id="4_1sypl"]
[ext_resource type="Texture2D" uid="uid://dqjra4emyvxfc" path="res://Assets/2D/particles/kenney_particle-pack/PNG (Transparent)/circle_03.png" id="4_gds8e"]
[ext_resource type="Texture2D" uid="uid://dvkf8tp7s5461" path="res://Assets/2D/AlchemicalProcesses/Aries_Calcination.png" id="5_pq1am"]
[ext_resource type="Texture2D" uid="uid://hynfrwtgbvxl" path="res://Assets/2D/AlchemicalProcesses/Taurus_Congelation.png" id="8_i0bb0"]
[ext_resource type="Texture2D" uid="uid://bpaywf238lnt1" path="res://Assets/2D/AlchemicalProcesses/Leo_Digestion.png" id="9_clew7"]
[ext_resource type="Texture2D" uid="uid://b8l5h3avop15d" path="res://Assets/2D/AlchemicalProcesses/Virgo_Distillation.png" id="10_wna7n"]
[ext_resource type="Texture2D" uid="uid://x7wlw5bydj5o" path="res://Assets/2D/AlchemicalProcesses/Libra_Sublimation.png" id="11_ot8d5"]
[ext_resource type="Texture2D" uid="uid://be21m7sk2l0sx" path="res://Assets/2D/AlchemicalProcesses/Scorpio_Separation.png" id="12_t54xu"]
[ext_resource type="Texture2D" uid="uid://ewlcjmyc4nox" path="res://Assets/2D/AlchemicalProcesses/Sagittarius_Ceration.png" id="13_lawte"]
[ext_resource type="Texture2D" uid="uid://c31yis5cdjonm" path="res://Assets/2D/AlchemicalProcesses/Capricorn_Fermentation_Putrefaction.png" id="14_1qupd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x2o37"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_irh0l"]
albedo_color = Color(0.180392, 0.180392, 0.180392, 1)
metallic = 1.0
roughness = 0.0

[sub_resource type="TorusMesh" id="TorusMesh_sbrgc"]
material = SubResource("StandardMaterial3D_irh0l")
inner_radius = 0.05
outer_radius = 0.06

[node name="AlchemicalProcessSymbol" type="CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.41025, -0.30262, 3.57228)
use_collision = true
collision_layer = 8
radius = 0.06
height = 0.01
material = SubResource("StandardMaterial3D_x2o37")
script = ExtResource("1_sbg4w")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_sbrgc")

[node name="ProcessIcon" type="Sprite3D" parent="."]
transform = Transform3D(-6.55671e-10, 0.015, 6.55671e-10, 0, -6.55671e-10, 0.015, 0.015, 6.55671e-10, 2.86603e-17, 0, 0.005, 0)
texture = ExtResource("2_u7c5d")

[node name="AlchemicalSymbolsChoice" type="Control" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ubrtl")

[node name="AlchemicalSymbol_Calcination" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -180.0
offset_right = 40.0
offset_bottom = -99.9999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_texture = ExtResource("5_pq1am")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Calcination"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Calcination"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Calcination"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Congelation" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.7
offset_top = -161.0
offset_right = 110.7
offset_bottom = -80.9999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 1
process_texture = ExtResource("8_i0bb0")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Congelation"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Congelation"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Congelation"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Fixation" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.0
offset_top = -110.7
offset_right = 161.0
offset_bottom = -30.6999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 2

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Fixation"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Fixation"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Fixation"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Solution" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -40.0
offset_right = 180.0
offset_bottom = 40.0001
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 3

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Solution"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Solution"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Solution"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Digestion" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.0
offset_top = 30.71
offset_right = 161.0
offset_bottom = 110.71
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 4
process_texture = ExtResource("9_clew7")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Digestion"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Digestion"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Digestion"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Distillation" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.71
offset_top = 81.0
offset_right = 110.71
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 5
process_texture = ExtResource("10_wna7n")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Distillation"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Distillation"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Distillation"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Sublimation" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 100.0
offset_right = 40.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 6
process_texture = ExtResource("11_ot8d5")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Sublimation"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Sublimation"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Sublimation"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Separation" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.71
offset_top = 81.0
offset_right = -30.71
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 7
process_texture = ExtResource("12_t54xu")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Separation"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Separation"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Separation"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Ceration" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 30.71
offset_right = -81.0
offset_bottom = 110.71
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 8
process_texture = ExtResource("13_lawte")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Ceration"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Ceration"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Ceration"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Fermentation" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -40.0
offset_right = -100.0
offset_bottom = 40.0001
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 9
process_texture = ExtResource("14_1qupd")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Fermentation"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Fermentation"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Fermentation"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Multiplication" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -110.71
offset_right = -81.0
offset_bottom = -30.7099
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 10
process_texture = ExtResource("2_u7c5d")

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Multiplication"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Multiplication"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Multiplication"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2

[node name="AlchemicalSymbol_Projection" type="Control" parent="AlchemicalSymbolsChoice"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.71
offset_top = -161.0
offset_right = -30.71
offset_bottom = -80.9999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
script = ExtResource("4_1sypl")
process_name = 11

[node name="InnerCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Projection"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_whpm2")
expand_mode = 2

[node name="OuterCircle" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Projection"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gds8e")
expand_mode = 2

[node name="ProcessIcon" type="TextureRect" parent="AlchemicalSymbolsChoice/AlchemicalSymbol_Projection"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7c5d")
expand_mode = 2
